openAI clients finished